semantics/oracle/tests/snapshots/better_api_semantics__oracle__tests__endpoint__lower_invalid_endpoint_path_params_option_or_array.snap
---
source: semantics/oracle/tests/endpoint.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "invalid path type",
        labels: [
            Label {
                style: Primary,
                message: "path fields can only be primitive types",
                span: Span {
                    start: 47,
                    end: 91,
                },
            },
            Label {
                style: Secondary,
                message: "non-simple field type here",
                span: Span {
                    start: 62,
                    end: 66,
                },
            },
        ],
        note: None,
    },
    Report {
        severity: Error,
        title: "invalid path type",
        labels: [
            Label {
                style: Primary,
                message: "path fields can only be primitive types",
                span: Span {
                    start: 47,
                    end: 91,
                },
            },
            Label {
                style: Secondary,
                message: "non-simple field type here",
                span: Span {
                    start: 80,
                    end: 85,
                },
            },
        ],
        note: None,
    },
]
