semantics/oracle/tests/snapshots/better_api_semantics__oracle__tests__endpoint__lower_invalid_endpoint_paths_not_unique.snap
---
source: semantics/oracle/tests/endpoint.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "duplicated endpoint path",
        labels: [
            Label {
                style: Primary,
                message: "duplicated endpoint path",
                span: Span {
                    start: 94,
                    end: 100,
                },
            },
            Label {
                style: Secondary,
                message: "same path first defined here",
                span: Span {
                    start: 4,
                    end: 14,
                },
            },
        ],
        note: None,
    },
]
