semantics/oracle/tests/snapshots/better_api_semantics__oracle__tests__endpoint__lower_invalid_endpoint_request_body_is_response.snap
---
source: semantics/oracle/tests/endpoint.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "invalid usage of `response` type",
        labels: [
            Label {
                style: Primary,
                message: "invalid usage of `response` type",
                span: Span {
                    start: 40,
                    end: 73,
                },
            },
        ],
        note: None,
    },
]
