semantics/oracle/tests/snapshots/better_api_semantics__oracle__tests__endpoint__lower_invalid_endpoint_response_status_code.snap
---
source: semantics/oracle/tests/endpoint.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "invalid response status",
        labels: [
            Label {
                style: Primary,
                message: "invalid response status",
                span: Span {
                    start: 49,
                    end: 53,
                },
            },
        ],
        note: None,
    },
]
